--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,7 +32,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
