Refactor Home component to use Suspense for loading state; integrate environment variables in docker-compose; update environment variable handling in env.ts for better defaults;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
       context: .
     ports:
       - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_POKE_API_URL=${NEXT_PUBLIC_POKE_API_URL}
+      - NEXT_PUBLIC_POKEMONS_BY_PAGE=${NEXT_PUBLIC_POKEMONS_BY_PAGE}
     volumes:
       - ./data:/app/data
   
